samples/_failures_safe/1761705958_cda0c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59e124a3.c: In function ‘main’:
./samples/SAFE/__tmp_59e124a3.c:153:9: error: expected declaration or statement at end of input
  153 |         }
      |         ^
./samples/SAFE/__tmp_59e124a3.c:153:9: error: expected declaration or statement at end of input
